--- a/slides-vizzu-slides-demo.html
+++ b/slides-vizzu-slides-demo.html
@@ -133,7 +133,7 @@ return g('<table class="{0}">{1}</table>',[b,a])}return e}function c(e){var t=e.
 				width: SLConfig.deck.width,
 				height: SLConfig.deck.height,
 				margin: 0.05,
-				
+				touch: false,
 
 				hash: true,
 				controls: true,
